--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "NodeChatSystem",
-  "version": "0.0.1",
-  "description": "Realtime chat system for Tutorialzine.com",
+  "name": "RealTime Chat",
+  "version": "1.2.0",
+  "description": "Realtime chat system",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "chat",
     "system"
   ],
-  "author": "Nikolay Anastasov",
+  "author": "Alexandr Bagirov",
   "license": "MIT",
   "dependencies": {
     "express": "~3.5.0",
