--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "RealTime Chat",
-  "version": "1.2.0",
+  "name": "NodeChatSystem",
+  "version": "0.0.2",
   "description": "Realtime chat system",
   "main": "app.js",
   "scripts": {
