--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "NodeChatSystem",
   "version": "1.2.0",
-  "description": "Realtime chat system",
+  "description": "Realtime chat system built with Node.js and Socket.io",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
